umol-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@indigo_ind-290-list2v2000.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: results
---
expected_category: invalid
category: invalid
molecule:
  success: false
  error:
    error_type: UnsupportedLegacyAtomList
    message: Unsupported legacy atom list at line 30
molecule_lenient:
  success: false
  error:
    error_type: UnsupportedLegacyAtomList
    message: Unsupported legacy atom list at line 30
extended_molecule:
  success: false
  error:
    error_type: UnsupportedLegacyAtomList
    message: Unsupported legacy atom list at line 30
extended_molecule_lenient:
  success: false
  error:
    error_type: InvalidLegacyAtomListLine
    message: "Invalid legacy atom list line at line 30, col 11"
